<resources>
    <string name="app_name">Lab2</string>
    <string name="action_settings">Settings</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="IntroTextView">Welcome to Rock-Paper-Scissors \n Please Choose Your Weapon:</string>
    <string name="playersWeapon">Player\'s Weapon:</string>
    <string name="computerWeapon">Computer\'s Weapon:</string>
</resources>
