<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RockPaperScissorsActivity"
    tools:showIn="@layout/activity_rock_paper_scissors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/introTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/IntroTextView"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playerPicksRock"
            android:text="@string/rock" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playerPicksPaper"
            android:text="@string/paper" />

        <Button
            android:id="@+id/scissorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playerPicksScissors"
            android:text="@string/scissors" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/playerWeaponTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/playersWeapon"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/computerWeaponTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/computerWeapon"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>